Revert to original animation system with getter/setter and Static Animation class it was a lot more flexible...

--- a/Magic3D.csproj
+++ b/Magic3D.csproj
@@ -175,7 +175,7 @@
     <Compile Include="src\divers\Coin.cs" />
     <Compile Include="src\divers\IRenderable.cs" />
     <Compile Include="src\divers\IAnimatable.cs" />
-    <Compile Include="src\CardsGroupAnimation.cs" />
+    <Compile Include="src\Animation.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="images\marble1.jpg">
