MagicAction, abilities organization with effects. Major improvments.

--- a/Magic3D.csproj
+++ b/Magic3D.csproj
@@ -211,6 +211,11 @@
       <LogicalName>
       </LogicalName>
     </None>
+    <None Include="ui\text.goml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <LogicalName>
+      </LogicalName>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="src\engine\Abilities.cs">
