* .gitignore: ignore list
* Deck.cs:
* magic3d.png:
* Magic.cs:
* Magic3D.csproj:
* Layout3d.cs:
* Animation.cs:
* CardGroup.cs:
* MagicCard.cs:
* MagicData.cs:
* CardLayout.cs:
* InPlayGroup.cs:
* Spell.cs:
* CardInstance.cs:
* Effect.cs:
* Target.cs:
* RenderedCardModel.cs:
* SVarToResolve.cs:
* Trigger.cs:
* Ability.cs:
* Attribut.cs:
* Abilities.cs:
* MagicStackLayout.cs:
* CardTarget.cs:
* EffectGroup.cs:
* MagicEngine.cs:
* IRenderable.cs:
* EffectInstance.cs:
* ActivatedAbility.cs:
* TriggeredAbility.cs: - spell effects
- X Counters
- arrows
- Layouting improvments
- debug

--- a/Magic3D.csproj
+++ b/Magic3D.csproj
@@ -375,11 +375,35 @@
       <LogicalName>
       </LogicalName>
     </Compile>
-    <Compile Include="src\engine\TriggeredAbility.cs">
+    <Compile Include="src\MagicStackLayout.cs">
       <LogicalName>
       </LogicalName>
     </Compile>
-    <Compile Include="src\engine\ActivatedAbility.cs">
+    <Compile Include="src\Layout3d.cs">
+      <LogicalName>
+      </LogicalName>
+    </Compile>
+    <Compile Include="src\MagicData.cs">
+      <LogicalName>
+      </LogicalName>
+    </Compile>
+    <Compile Include="RenderedCardModel.cs">
+      <LogicalName>
+      </LogicalName>
+    </Compile>
+    <Compile Include="src\engine\EffectGroup.cs">
+      <LogicalName>
+      </LogicalName>
+    </Compile>
+    <Compile Include="src\SVarToResolve.cs">
+      <LogicalName>
+      </LogicalName>
+    </Compile>
+    <Compile Include="src\engine\CardTarget.cs">
+      <LogicalName>
+      </LogicalName>
+    </Compile>
+    <Compile Include="src\engine\EffectInstance.cs">
       <LogicalName>
       </LogicalName>
     </Compile>
