ChangeZone as Effect instead of ability

--- a/Magic3D.csproj
+++ b/Magic3D.csproj
@@ -402,6 +402,10 @@
       <LogicalName>
       </LogicalName>
     </Compile>
+    <Compile Include="src\engine\Effects\ChangeZoneEffect.cs">
+      <LogicalName>
+      </LogicalName>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="images\marble1.jpg">
