--- a/Magic3D.csproj
+++ b/Magic3D.csproj
@@ -410,6 +410,10 @@
       <LogicalName>
       </LogicalName>
     </Compile>
+    <Compile Include="src\engine\Effects\CounterEffect.cs">
+      <LogicalName>
+      </LogicalName>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="images\marble1.jpg">
